[FIX]add min-height in content main stretch

--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ header{
 
 .content-main-stretch{
     margin: 10px 5px;
-    height: 900px; 
+    min-height: 900px; 
 }
 
 .content-footer{
